--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "sass": "^1.42.1",
     "vue": "^3.0.0",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
