--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "chart.js": "^3.7.1",
+    "chart.js": "2.9.4",
     "core-js": "^3.6.5",
     "sass": "^1.42.1",
     "vue": "^3.0.0",
